# modbus-map-maker

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile  compose.yml
docs/: notes.md
examples/: mapping.csv
src/modbus_map_maker/: __init__.py  cli.py  emitters.py  excel.py  models.py  template_store.py
src/modbus_map_maker/templates/: c_struct.h.j2  plc_defs.txt.j2  python_map.j2
tests/: conftest.py  test_basic.py  test_templates.py
