[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modbus-map-maker"
version = "0.1.0"
description = "Generate Modbus mapping from CSV/Excel to JSON/YAML and code emitters (Python/C/PLC)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name="Francesco Casali", email="example@example.com"}]
keywords = ["modbus", "mapping", "industrial", "iot", "automation", "energy"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "pandas>=2.1",
  "pydantic>=2.6",
  "typer>=0.12",
  "jinja2>=3.1",
  "pyyaml>=6.0",
  "openpyxl>=3.1"
]

[project.scripts]
modbus-map-maker = "modbus_map_maker.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["modbus_map_maker*"]